<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:icon="@drawable/action_help_black_24dp"
        android:title="@string/action_help"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_donate"
        android:orderInCategory="100"
        android:icon="@drawable/action_donate_black_24dp"
        android:title="@string/action_donate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_credit"
        android:orderInCategory="100"
        android:icon="@drawable/action_info_black_24dp"
        android:title="@string/action_credit"
        app:showAsAction="never" />

</menu>
