<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/make_stamp_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_for_alpha_image"
    android:orientation="vertical"
    tools:context=".kotlin.makestamp.KtMakeStampActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/main_bg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="48dp"
        android:paddingTop="24dp"
        android:paddingEnd="48dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/make_stamp_name_edit_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_stamp_name"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/make_stamp_submit_button"
                android:background="@null"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/make_stamp_hidden_checkbox"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text_color"
                android:text="@string/stamp_hidden_checkbox_text"
                android:textSize="14sp" />

            <TextView
                android:layout_marginStart="32dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/stamp_hidden_checkbox_hint"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/make_stamp_image_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/make_stamp_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null" />

        </LinearLayout>
</LinearLayout>